🐛 Fixed overflow issues

--- a/components/Header/Breadcrumb/Breadcrumb.module.scss
+++ b/components/Header/Breadcrumb/Breadcrumb.module.scss
@@ -23,7 +23,7 @@
     font-size: 1rem;
     align-items: center;
 
-    overflow: scroll;
+    overflow-x: auto;
     white-space: nowrap;
 
     &__item {
